update: fix dark mode table view

--- a/source/styles/cold-stone.css
+++ b/source/styles/cold-stone.css
@@ -773,4 +773,8 @@ code {
   .hover-underline-animation::after {
     background-color: #fff;
   }
+  
+  tr:nth-child(2n) {
+    background-color: #4e4a4a;
+  }
 }
